# MageMaker

./: LICENSE  README.md  launch.sh  pyproject.toml  requirements.txt
magemaker/: __init__.py  character.py  data.py  gui.py
