[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magemaker"
version = "1.0.0"
description = "Mage: The Ascension 20th Anniversary Edition Character Creator"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TraydMarkk"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
]
keywords = ["mage", "ascension", "character", "creator", "rpg", "world of darkness"]
dependencies = [
    "PyGObject>=3.42.0",
]

[project.scripts]
magemaker = "magemaker.gui:main"

[project.urls]
Homepage = "https://github.com/TraydMarkk/MageMaker"

[tool.setuptools.packages.find]
where = ["."]
include = ["magemaker*"]

